--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-runtime": "^6.26.0",
+    "fit-tool": "^1.0.64",
     "le-ui": "^1.4.37",
     "lefit-moment": "^1.0.4",
     "rollup": "^0.59.4",
@@ -45,6 +46,7 @@
     "globby": "^8.0.1",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
+    "uglify-js": "^3.4.0",
     "url-loader": "^1.0.1",
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
