--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "xiaobei-utils",
   "description": "A Vue.js project",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "author": "cMing <mayday404@163.com>",
   "license": "MIT",
   "private": false,
@@ -14,7 +14,8 @@
     "le-ui": "^1.4.37",
     "lefit-moment": "^1.0.4",
     "vue": "^2.5.11",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "weixin-js-sdk": "^1.3.2"
   },
   "browserslist": [
     "> 1%",
